Add new settings

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,4 +1,4 @@
-########### ANCIBLE MANAGED FILE ###########
+########### ANSIBLE MANAGED FILE ###########
 
 user              {{ nginx_user }};
 worker_processes  {{ nginx_worker_processes }};
