--- a/templates/vhost/vhost_example.org.j2
+++ b/templates/vhost/vhost_example.org.j2
@@ -2,7 +2,7 @@
 
 server {
     listen	 80;
-    server_name {{ item.erver_name }};
+    server_name {{ item.server_name }};
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
